# opentelemetry-rust-contrib

./: Cargo.toml  EXPORTER_TRAIT_SOLUTION.md  config_readme.md
.github/workflows/: ci.yml  ossf-scorecard.yml
examples/custom-exporter-guide/: Cargo.toml  README.md  advanced-example.rs  basic-example.rs  config-advanced.yaml  config-basic.yaml  config-multiple.yaml  multiple-exporters-example.rs
opentelemetry-exporter-geneva/geneva-uploader/: Cargo.toml
opentelemetry-exporter-geneva/geneva-uploader-ffi/examples/: c_example.c
opentelemetry-exporter-geneva/geneva-uploader-ffi/include/: geneva_ffi.h
opentelemetry-exporter-geneva/geneva-uploader-ffi/src/: lib.rs
opentelemetry-exporter-geneva/geneva-uploader/examples/: azure_arc_msi_example.rs
opentelemetry-exporter-geneva/geneva-uploader/src/: auth.rs  bench.rs  buffer_pool.rs  client.rs  config.rs  error.rs  lib.rs
opentelemetry-exporter-geneva/geneva-uploader/src/client/: config_service.rs  config_service_manager.rs  ingestion_service.rs  mod.rs
opentelemetry-exporter-geneva/geneva-uploader/src/config_service/: azure_arc_msi.rs  client.rs  mod.rs
opentelemetry-exporter-geneva/geneva-uploader/src/ingestion_service/: mod.rs  uploader.rs
opentelemetry-exporter-geneva/geneva-uploader/src/models/: gcs.rs
opentelemetry-exporter-geneva/geneva-uploader/src/payload_encoder/: arrow_log_encoder.rs  bond_encoder.rs  central_blob.rs  encoder_benchmark.rs  encoder_trait.rs  integration_tests.rs  lz4_chunked_compression.rs  mod.rs  otap_encoder.rs  otap_log_encoder.rs  otlp_encoder.rs  otlp_encoder_simplified.rs
opentelemetry-exporter-geneva/geneva-uploader/src/utils/: jwt.rs  mod.rs  retry.rs
opentelemetry-exporter-geneva/opentelemetry-exporter-geneva/: Cargo.toml
opentelemetry-exporter-geneva/opentelemetry-exporter-geneva/examples/: azure_arc_logging.rs  basic.rs  basic_msi_test.rs  basic_workload_identity_test.rs  trace_basic.rs
opentelemetry-exporter-geneva/opentelemetry-exporter-geneva/src/: lib.rs
opentelemetry-exporter-geneva/opentelemetry-exporter-geneva/src/logs/: exporter.rs  mod.rs
opentelemetry-exporter-onecollector/: Cargo.toml
opentelemetry-exporter-onecollector/examples/: test_server.rs
opentelemetry-exporter-onecollector/src/: exporter.rs  lib.rs
opentelemetry-exporter-onecollector/src/contextual_info/: contextual_info.rs  mod.rs
opentelemetry-exporter-onecollector/src/serialization/: cs_v4_json.rs  mod.rs
opentelemetry-exporter-onecollector/src/transport/: http_post.rs  mod.rs
opentelemetry-exporter-onecollector/tests/: test_server.rs
opentelemetry-user-events-logs/examples/: basic-logs.rs
opentelemetry-user-events-logs/src/: lib.rs
opentelemetry-user-events-logs/src/logs/: exporter.rs
otel-config-2/: APPROACH_2_EXPLAINED.md  Cargo.toml  IMPLEMENTATION_NOTES.md  README.md  SUMMARY.md
otel-config-2-custom-exporter/: Cargo.toml  README.md
otel-config-2-custom-exporter/examples/demo/: Cargo.toml  config.yaml  main.rs
otel-config-2-custom-exporter/src/: lib.rs
otel-config-2/examples/simple/: Cargo.toml  config.yaml  main.rs
otel-config-2/src/: error.rs  lib.rs  model.rs
scripts/: setup_perf_decoder.sh  test.sh  test_user_events.sh
stress/: Cargo.toml
stress/src/: async_throughput.rs  etw_logs.rs  geneva_exporter.rs  user_events_logs.rs
