[package]
name = "otel-config-2-custom-exporter"
version = "0.1.0"
description = "Example custom exporter for otel-config-2 demonstrating external integration"
edition = "2021"
rust-version = "1.75.0"
license = "Apache-2.0"

[dependencies]
otel-config-2 = { path = "../otel-config-2" }
opentelemetry = { version = "0.31.0" }
opentelemetry_sdk = { version = "0.31.0" }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = { version = "0.9.34" }
async-trait = "0.1"

# This is a standalone crate, not part of workspace
[workspace]
