[package]
name = "geneva-uploader"
version = "0.1.0"
edition = "2021"

[dependencies]
opentelemetry-proto = {workspace = true, default-features = false, features = ["logs"]}

reqwest = { version = "0.12", features = ["json", "native-tls-vendored"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.4", features = ["v4"] }
base64 = "0.22"
thiserror = "2.0"

[lints]
workspace = true

