[package]
name = "custom-exporter-demo"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "demo"
path = "main.rs"

[dependencies]
otel-config-2 = { path = "../../otel-config-2" }
otel-config-2-custom-exporter = { path = "../.." }
opentelemetry = { version = "0.31.0" }
opentelemetry_sdk = { version = "0.31.0" }
opentelemetry-stdout = { version = "0.31.0" }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }

# Standalone example
[workspace]
