[package]
name = "otel-config-simple-example"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "simple"
path = "main.rs"

[dependencies]
otel-config-2 = { path = "../.." }
opentelemetry = { version = "0.31.0" }
opentelemetry_sdk = { version = "0.31.0" }
opentelemetry-stdout = { version = "0.31.0" }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = { version = "0.9.34" }
tokio = { version = "1.0", features = ["full"] }

# Standalone example, not part of workspace
[workspace]
